[UI] Warn mess: select devices before attempting a transfer

--- a/client/web/static/css/style.css
+++ b/client/web/static/css/style.css
@@ -428,6 +428,10 @@ div.progress {
   left: 3px;
 }
 
+#warn-select > .modal-dialog {
+  top: 30%;
+}
+
 @keyframes file_filtered {
   from {
     opacity: 1;
