ui: disable text selection

--- a/client/web/static/css/style.css
+++ b/client/web/static/css/style.css
@@ -6,6 +6,11 @@
 
 .container {
     max-width: None;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -o-user-select: none;
 }
 
 .content {
